--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,13 +11,13 @@
 a,
 .green {
     text-decoration: none;
-    color: hsla(160, 100%, 37%, 1);
+    color: hsl(227.7, 33.9%, 48%);
     transition: 0.4s;
 }
 
 @media (hover: hover) {
     a:hover {
-        background-color: hsla(160, 100%, 37%, 0.2);
+        background-color: hsla(227.7, 33.9%, 48%, 0.2);
     }
 }
 
