--- a/src/stylesheets/about.css
+++ b/src/stylesheets/about.css
@@ -1,5 +1,5 @@
 html * {
-    font-family: monospace;
+    font-family: 'mononoki-Regular', monospace;
 }
 
 .about {
@@ -8,15 +8,11 @@ html * {
     background-color: white;
     border-radius: 2em;
     user-select: none;
-}
 
-.about a {
-    opacity: 1;
-    transition: all 0.5s;
-}
-
-.aboutLink a {
-    opacity: 1;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .aboutBody {
